--- a/review/reviewer-1.tex
+++ b/review/reviewer-1.tex
@@ -160,8 +160,9 @@ Some minor problems or typos are listed:
 \item Corrected.
 \item Added.
 \item Corrected.
-\item BRUNO, ref 26.
-\item I think both should be $n_\gamma$, Bruno?
+\item Corrected.
+\item They both should be $n_\gamma$, corrected
+\item BRUNO
 \item It is the triangular GLC quadrature. We have added reference to it.
 \item BRUNO
 \item Corrected.
