--- a/review/reviewer-1.tex
+++ b/review/reviewer-1.tex
@@ -155,7 +155,7 @@ Some minor problems or typos are listed:
 
 
 \begin{enumerate}
-\item BRUNO add table
+\item Added a table for GMRes with polygonal cells.
 \item Corrected.
 \item Corrected.
 \item Added.
