--- a/review/reviewer-1.tex
+++ b/review/reviewer-1.tex
@@ -93,7 +93,8 @@ The authors imply the solver works with arbitrary shapes of polygons, but I thin
 }
 
 
-BRUNO
+Added a test case with large aspect ratio on mesh of degenerated polygons with
+multiple hanging nodes. Add a reference for non-convex polygonal cell.
 
 \bigskip
 
