--- a/review/reviewer-1.tex
+++ b/review/reviewer-1.tex
@@ -104,7 +104,7 @@ multiple hanging nodes. Add a reference for non-convex polygonal cell.
 3. The authors need to carefully examine the control parameters they used for AMG, like the upper bound of the two-grid condition number (line 228), and etc., so that the readers can have a better understanding on the performances of different AMG packages.
 }
 
-BRUNO
+Added
 
 \bigskip
 
@@ -163,9 +163,9 @@ Some minor problems or typos are listed:
 \item Corrected.
 \item Corrected.
 \item They both should be $n_\gamma$, corrected
-\item BRUNO
+\item Corrected.
 \item It is the triangular GLC quadrature. We have added reference to it.
-\item BRUNO
+\item Corrected.
 \item Corrected.
 \item Corrected.
 \item Added a paragraph at the end of Section 3, so that the statement in the conclusion is clearer.
