--- a/review/reviewer-1.tex
+++ b/review/reviewer-1.tex
@@ -58,7 +58,7 @@
 
 \noindent Ms. Ref. No. JCOMP-D-13-01486\\
 Title: Discontinuous Diffusion Synthetic Acceleration for Sn Transport on 2D Arbitrary Polygonal Meshes \\
-Journal of Computational Physics,\\
+{\it Journal of Computational Physics},\\
 
 \bigskip
 \bigskip
@@ -93,8 +93,9 @@ The authors imply the solver works with arbitrary shapes of polygons, but I thin
 }
 
 
-Added a test case with large aspect ratio on mesh of degenerated polygons with
-multiple hanging nodes. Add a reference for non-convex polygonal cell.
+Added a test case with large aspect ratio on mesh consisting of degenerated polygons (rectangle-shaped cells with 23 vertices treated as a ``23-gon'' --a polygon with 23 sides). That mesh has many hanging nodes.
+
+We were limited to convex cells because our transport sweep algorithm did not allow for cycle in the sweep. We added Reference \textcolor{red}{copy number form final manuscript} where PWLD was employ to carry out Sn transport sweeps for non-convex polygonal cells. The DSA solver works on \textcolor{red}{arbitrary} distorted cells.
 
 \bigskip
 
@@ -104,7 +105,11 @@ multiple hanging nodes. Add a reference for non-convex polygonal cell.
 3. The authors need to carefully examine the control parameters they used for AMG, like the upper bound of the two-grid condition number (line 228), and etc., so that the readers can have a better understanding on the performances of different AMG packages.
 }
 
-Added
+The AMG algorithms (Trilinos ML and AGMG) was used with their default options. Unless stated otherwise, ML is
+used with all the parameters set to the values corresponding to the ``SA'' (smoothed aggregation) options. 
+\textcolor{red}{Bruno: you said this was the recommended options for diffusion problem. Can you confirm that and maybe give me a reference for that, in the manual or online?} 
+AGMG is used with default parameters. \textcolor{red}{do they mention anything, in papers or int he manual, about what are recommended options for diffusion? I'd like to reply with a few more sentence to the reviewer's question. Thanks}
+
 
 \bigskip
 
@@ -115,7 +120,7 @@ Added
 }
 
 
-ME
+\textcolor{red}{ME}
 
 \bigskip
 
@@ -156,7 +161,7 @@ Some minor problems or typos are listed:
 
 
 \begin{enumerate}
-\item Added a table for GMRes with polygonal cells.
+\item Added a table for GMRes results with polygonal cells.
 \item Corrected.
 \item Corrected.
 \item Added.
@@ -164,7 +169,7 @@ Some minor problems or typos are listed:
 \item Corrected.
 \item They both should be $n_\gamma$, corrected
 \item Corrected.
-\item It is the triangular GLC quadrature. We have added reference to it.
+\item It is the triangular GLC quadrature. We have added reference to it (Ref. \textcolor{red}{copy number form final manuscript}).
 \item Corrected.
 \item Corrected.
 \item Corrected.
