--- a/review/latex-source-files/biblio.bib
+++ b/review/latex-source-files/biblio.bib
@@ -1059,3 +1059,11 @@
   year={2000},
   publisher={Springer}
 }
+@ARTICLE{quadrature,
+  author = {Richard Sanchez and Jean C. Ragusa},
+  title = {On The Construction Of Galerkin Angular Quadratures},
+  journal = {Nuclear Science and Engineering},
+  year = {2011},
+  volume = {169},
+  pages = {133--154},
+}
