--- a/review/reviewer-1.tex
+++ b/review/reviewer-1.tex
@@ -79,7 +79,7 @@ However, I want the authors address the following issues before a publication:\\
 1. The statement that 'polygonal grids allow for a reduced numbers of unknowns' is not complete. It is meaningful only in the condition of not sacrificing the accuracy. The authors need to provide numerical supports or give up the statement completely. The first part in the third paragraph of Introduction is superficial in this sense.
 }
 
-We agree. We had this ``information'' first-hand from Marv Adams but asked him about a Reference to back-up this statement. It turns out we have no numerical results to support this conjecture so far. The testbed code we developed for this paper does not implement LD nor can handle a mix of LD and BLD discretized cells which would also be required. Thus, we have followed your suggestion to give up the statement completely but will keep in mind that this study needs to be carried out. 
+We agree. We had this ``information'' first-hand from Marv Adams but asked him about a Reference to back-up this statement. It turns out we have no numerical results to support this conjecture so far. The testbed code we developed for this paper does not implement LD on triangles nor can handle a mix of LD and BLD discretized cells, both of which would also be required to compare against polygonal grids solved with PWLD. Thus, we have followed your suggestion to give up the statement completely but will keep in mind that this study needs to be carried out. 
 
 \bigskip
 
@@ -93,9 +93,9 @@ The authors imply the solver works with arbitrary shapes of polygons, but I thin
 }
 
 
-Added a test case with large aspect ratio on mesh consisting of degenerated polygons (rectangle-shaped cells with 23 vertices treated as a ``23-gon'' --a polygon with 23 sides). That mesh has many hanging nodes.
+We added a test case with large aspect ratio on mesh consisting of degenerated polygons (rectangle-shaped cells with up to 23 vertices treated as a ``23-gon'' --a polygon with 23 sides). That grid also has many hanging nodes.
 
-We were limited to convex cells because our transport sweep algorithm did not allow for cycle in the sweep. We added Reference \textcolor{red}{copy number form final manuscript} where PWLD was employ to carry out Sn transport sweeps for non-convex polygonal cells. The DSA solver works on \textcolor{red}{arbitrary} distorted cells.
+We were limited to convex cells because our transport sweep algorithm did not allow for cycles in the graph of the sweep. We added Reference 32 where PWLD was employed to carry out Sn transport sweeps for non-convex polygonal cells. % The DSA solver works on \textcolor{red}{arbitrary} distorted cells.
 
 \bigskip
 
@@ -105,14 +105,13 @@ We were limited to convex cells because our transport sweep algorithm did not al
 3. The authors need to carefully examine the control parameters they used for AMG, like the upper bound of the two-grid condition number (line 228), and etc., so that the readers can have a better understanding on the performances of different AMG packages.
 }
 
-The AMG algorithms (Trilinos ML and AGMG) was used with their default options. Unless stated otherwise, ML is
-used with all the parameters set to the values corresponding to the ``SA'' (smoothed aggregation) options. 
-\textcolor{red}{Bruno: you said this was the recommended options for diffusion problem. Can you confirm that and maybe give me a reference for that, in the manual or online?} 
-AGMG is used with default parameters. Added that ``SA'' is recommended for
-symmetric positive definite systems. \textcolor{red}{do they mention anything, in papers or int he manual, about what are recommended options for diffusion? I'd like to reply with a few more sentence to the reviewer's question. Thanks}
-To change the parameters, you need to change them in the code and recompile
-everything... The default parameters are always recommended except if you are an
-''expert''.
+The AMG algorithms (Trilinos ML and AGMG) were used with their default options. Unless stated otherwise, ML is
+used with all the parameters set to the values corresponding to the ``SA'' (smoothed aggregation) options. The ML manual recommends ``SA'' symmetric positive definite systems.
+AGMG is used with default parameters. 
+%The AGMG manual
+%To change the parameters, you need to change them in the code and recompile
+%everything... The default parameters are always recommended except if you are an
+%''expert''.
 
 
 \bigskip
@@ -171,9 +170,9 @@ Some minor problems or typos are listed:
 \item Added.
 \item Corrected.
 \item Corrected.
-\item They both should be $n_\gamma$, corrected
+\item They both should be $n_\gamma$, corrected.
 \item Corrected.
-\item It is the triangular GLC quadrature. We have added reference to it (Ref. \textcolor{red}{copy number form final manuscript}).
+\item It is the triangular GLC quadrature. We have added reference to it (Ref. 30).
 \item Corrected.
 \item Corrected.
 \item Corrected.
