--- a/review/latex-source-files/JCOMP-D-13-01486-revised.tex
+++ b/review/latex-source-files/JCOMP-D-13-01486-revised.tex
@@ -145,7 +145,7 @@ polygonal cells.
 
 Arbitrary polygonal (polyhedral in 3D) cells provide a natural transition for locally 
 adapted meshes, may arise, for instance, when arbitrary cut lines are used to split an existing mesh,
-and are now more frequently found, e.g., in fluid simulations \cite{openfoam, starccm}.
+and are now more frequently found, e.g., in fluid simulations (e.g., StarCCM+ \cite{starccm}).
 
  
 %In that sense, the proposed DSA scheme 
@@ -1338,7 +1338,7 @@ The mesh is shown in Figure~\ref {fig_degenerated_polygons}.
 Without DSA, SI needs 17,592 iterations to converge whereas it takes only 20
 iterations when MIP-DSA is employed. The scalar flux solution is shown on 
 Figure~\ref {fig_no_dsa} and the contour lines of the scalar flux are shown on Figure~\ref
-{fig_counter}.
+{fig_contour}.
 \begin{figure}[!htbp]
   \begin{subfigure}{0.45\textwidth}
     \centering
